--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-image: url("../images/background.jpg"); /* Path to your image */
+    {
+    background-image: url("../images/IMG_20221211_171637.jpg"); /* C:\Users\LINK TRADERS LT\OneDrive\Pictures */
     background-size: cover; /* Ensures the image covers the entire background */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     background-position: center center; /* Centers the image */
